2022-12-16T18:40:31.041Z |            1.2.1 | Template literal indent fix
2022-12-16T18:42:52.602Z |            1.2.2 | libs upd.
2022-12-17T13:55:59.861Z |            1.2.3 | add eqeqeq ignore null
2022-12-20T09:32:05.864Z |            1.2.4 | module css fix
2023-02-18T16:27:52.953Z |            1.2.4 |
2023-02-18T16:28:51.422Z |            1.2.5 | upd libs
2023-03-12T09:46:32.686Z |            1.3.0 | Update to linters major versions
2023-03-16T17:15:55.546Z |            1.3.1 | Dependencies update
2023-03-16T17:30:46.284Z |            1.3.2 | stylelint: `comment-empty-line-before`, removed `except: ['first-nested']`
2023-04-01T14:27:04.603Z |            1.3.3 | Dependencies update
2023-04-05T14:00:12.149Z |            1.3.4 | added `return` at-rule
2023-04-05T14:03:34.057Z |            1.3.5 | fix
2023-04-08T13:14:40.775Z |            1.3.6 | Dependencies update
2023-04-10T15:30:08.416Z |            1.3.7 | Dependencies update
2023-04-11T08:30:48.156Z |            1.3.8 | stylelint: 'stylistic/string-quotes': 'single'
2023-04-12T10:46:28.133Z |            1.3.9 | stylelint: stylistic fix
2023-04-24T09:34:36.825Z |           1.3.10 | upd
2023-04-30T10:59:26.711Z |           1.3.11 | upd dependencies
2023-05-01T19:58:42.247Z |           1.3.12 | stylelint: stylistic fix
2023-05-17T08:01:26.081Z |            1.4.0 | stylelint: stylistic implementation
2023-06-21T15:11:44.568Z |            1.4.1 | Upd. dependencies
2023-07-03T14:16:07.977Z |            1.4.2 | Upd. dependencies
2023-07-07T08:43:42.732Z |            1.4.3 | Upd. dependencies
2023-07-08T10:52:58.422Z |            1.4.4 | Downgrade stylelint to 15.9 waiting for stylistic fix for 15.10
2023-07-09T12:07:15.605Z |            1.4.5 | Upd. dependencies
2023-07-10T08:47:43.557Z |            1.4.6 | Upd. dependencies
2023-07-24T09:37:24.609Z |            1.5.0 | added `eslint-config-react-app`
2023-07-24T10:13:12.621Z |            1.5.1 | eslint: 'no-extra-boolean-cast': 'off'