@@ -1,6 +1,6 @@
 {
   "name": "@massimo-cassandro/linters-config",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "description": "Css & js linters configurations",
   "scripts": {
     "npm update": "npm update --save",
