@@ -355,11 +355,21 @@ module.exports = {
         'scss/at-import-partial-extension': 'never',
         'scss/at-mixin-named-arguments': null,
         'scss/at-mixin-parentheses-space-before': 'never',
-        // 'scss/at-rule-no-unknown': true,
+        'scss/at-rule-no-unknown': true,
         'scss/at-rule-no-unknown': [
           true,
           {
             ignoreAtRules: [
+
+              // tailwind
+              'tailwind',
+              'apply',
+              'layer',
+              'variants',
+              'responsive',
+              'screen',
+
+              // sass
               'extend',
               'include',
               'if',
