@@ -28,3 +28,4 @@
 2023-07-10T08:47:43.557Z |            1.4.6 | Upd. dependencies
 2023-07-24T09:37:24.609Z |            1.5.0 | added `eslint-config-react-app`
 2023-07-24T10:13:12.621Z |            1.5.1 | eslint: 'no-extra-boolean-cast': 'off'
+2023-08-28T09:26:49.095Z |            1.5.2 | fix tailwind support
